--- a/source/dialogs/curve-attribute/curve-attribute-modal.html
+++ b/source/dialogs/curve-attribute/curve-attribute-modal.html
@@ -66,7 +66,7 @@
                                 <br>
                                 <div class="row">
                                     <div class="col-sm-8">
-                                        <div class="form-group">
+                                        <!-- <div class="form-group">
                                             <label class="control-label col-sm-4" for="style">Symbol Style</label>
                                             <div class="col-sm-8">
                                                 <ui-select theme="bootstrap" ng-model="wiModal.symbolOptions.symbolStyle.symbolLineDash">
@@ -78,7 +78,6 @@
                                                     </ui-select-match>
                                                     <ui-select-choices repeat="style in wiModal.lineStyles" class="text-left">
                                                         <div class="container-fluid">
-                                                            <!--<div class="col-sm-2 text-left"></div>-->
                                                             <svg height="10" width="100%" class="col-sm-12">
                                                                 <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{style.join(',')}}"
                                                                         style="stroke: {{wiModal.symbolOptions.symbolStyle.symbolStrokeStyle}}; stroke-width: 1"></line>
@@ -87,6 +86,15 @@
 
                                                     </ui-select-choices>
                                                 </ui-select>
+                                            </div>
+                                        </div> -->
+                                        <div class="form-group">
+                                            <label class="control-label col-sm-4">Symbol Type</label>
+                                            <div class="col-sm-8">
+                                                <select ng-model="wiModal.symbolOptions.symbolStyle.symbolName"
+                                                        class="form-control wi-form-control"
+                                                        ng-options="item for item in wiModal.symbolType">
+                                                </select>
                                             </div>
                                         </div>
                                     </div>
