--- a/source/dialogs/zone-track-properties/zone-track-properties-modal.html
+++ b/source/dialogs/zone-track-properties/zone-track-properties-modal.html
@@ -85,12 +85,13 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-5 normal-text" for="zone-set">
                                   Zone Set</label>
-                                <div class="col-sm-5">
+                                <div class="col-sm-6">
                                     <select id="zone-set" class="form-control wi-form-control" ng-options="zoneSet.idZoneSet as zoneSet.name for zoneSet in wiModal.zoneSets" ng-model="wiModal.idZoneSet" ng-change="wiModal.checkZoneSet()" required>
                                     </select>
                                 </div>
-                                <div class="col-sm-2">
-                                    <button type="button" class="btn btn-default" ng-click="wiModal.createZoneSet()">+</button>
+                                <div class="col-sm-1">
+                                    <!--<button type="button" class="btn btn-default" ng-click="wiModal.createZoneSet()">+</button>-->
+                                    <a style="font-size: 150%;text-decoration: none;cursor: pointer;" ng-click='wiModal.createZoneSet();' class='fa fa-plus-circle'></a>
                                 </div>
                             </div>
                         </div>
