--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -17,7 +17,7 @@
                                         <div class="col-sm-offset-1 col-sm-11 container-fluid">
                                             <div class="form-group">
                                                 <input class="col-sm-1" type="radio" name="depth" ng-model="wiModal.depthType" ng-change="wiModal.onDepthTypeChanged()" value="intervalDepth">
-                                                <label><span>Interval Depths</span></label>
+                                                <label>Interval Depths</label>
                                             </div>
                                             <div class='form-group'>
                                                 <label class="col-sm-3">Top(m)</label>
@@ -34,7 +34,7 @@
                                             <div class="form-group">
                                                 <input class="col-sm-1" type="radio" name="depth" value="zonalDepth" ng-change="wiModal.onDepthTypeChanged()" ng-model="wiModal.depthType"
                                                     ng-disabled="!wiModal.zoneSetList.length">
-                                                <label><span>Zone Depths</span></label>
+                                                <label>Zone Depths</label>
                                             </div>
                                             <div class="form-group">
                                                 <label class="col-sm-3">Zones</label>
